# Creative-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.txt  build.sh  engine  main  main.cpp
Core/: Logger.cpp  Logger.h  Time.cpp  Time.h
CreativeEngine/: Makefile  creative_engine  frame.ppm  main.cpp  player.ppm  walk_cycle.ppm
CreativeEngine/Engine/Core/: Log.h  Math.h  Memory.h
CreativeEngine/Engine/MatterSystem/: Law.h  Matter.cpp  Matter.h
CreativeEngine/Engine/MatterSystem/Laws/: AnimationLaw.cpp  AnimationLaw.h  AppearanceLaw.h  SpriteLaw.cpp  SpriteLaw.h
CreativeEngine/Engine/Platform/: Input.h  Timer.cpp  Timer.h  Window.h
CreativeEngine/Engine/Platform/Linux/: Input.cpp  Window.cpp
CreativeEngine/Engine/Renderer/: Camera2D.h  Image.cpp  Image.h  Renderer2D.cpp  Renderer2D.h
CreativeEngine/Engine/SceneSpace/: SceneSpace.cpp  SceneSpace.h
Engine/: Application.cpp  Application.h  GameLoop.cpp  GameLoop.h
GameEngine/: CMakeLists.txt  README.md  avance.md
GameEngine/include/: GameEngine.h
GameEngine/src/: CMakeLists.txt  GameEngine.cpp  main.cpp
Glad/: glad.c  glad.h
Glad/KHR/: khrplatform.h
Glad/include/glad/: glad.h
Glad/src/: glad.c
ImGui/: desktop.ini  imconfig.h
Input/: InputManager.cpp  InputManager.h
Object/: Component.cpp  Component.h  Object.cpp  Object.h
Platform/: Window.cpp  Window.h
creative-engine/: Cargo.toml
creative-engine/creative_engine_core/: Cargo.toml
creative-engine/creative_engine_core/src/: lib.rs  state.rs
creative-engine/creative_engine_core/src/rendering/: mod.rs
creative-engine/creative_engine_editor/: Cargo.toml
creative-engine/creative_engine_editor/src/: main.rs
src/: CMakeLists.txt  main.cpp
src/core/: AppearanceLaw.cpp  AppearanceLaw.h  Law.h  MaterialColorLaw.cpp  MaterialColorLaw.h  Matrix4.cpp  Matrix4.h  Matter.cpp  Matter.h  TransformLaw.cpp  TransformLaw.h  Vector3.cpp  Vector3.h
src/editor/: CameraController.cpp  CameraController.h  Editor.cpp  Editor.h  Gizmo.cpp  Gizmo.h
src/renderer/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  line.frag  line.vert
